Bug 1460055 - Make strimatch static to fix error with GCC about exception handling mangling. r=aklotz

MozReview-Commit-ID: CLBt2Siasdm